k8s/argo-rollouts/service.yml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  selector:
    app.kubernetes.io/name: argo-rollouts
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP


---

apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  selector:
    app: argo-rollouts
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3100
