k8s/argo-rollouts/destination-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  host: argo-rollouts-dashboard.argo-rollouts.svc.cluster.local  # Nome completo do serviço
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
