k8s/argo-rollouts/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  hosts:
  - "lab.com.br"
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /rollouts/
    route:
    - destination:
        host: argo-rollouts-dashboard.argo-rollouts.svc.cluster.local
        port:
          number: 3100
