k8s/argo-rollouts/vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  hosts:
  - "argo.lab.com.br"
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: argo-rollouts.argo-rollouts.svc.cluster.local
        port:
          number: 80
